<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cz.alois-seckar.java</groupId>
    <artifactId>JavaDemos</artifactId>
    <version>25.0</version>
    <packaging>jar</packaging>
    
    <properties>
        <java.version>25</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
    </properties>
    
    <dependencies>
        <dependency>
            <!-- for simplier getter/setter/constructor declarations -->
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <!-- for reading data from JSON files -->
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <!-- adding MANIFEST.MF to .jar -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.javademos.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <!-- responsible for performing .jar build -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <release>25</release>
                    <compilerArgs>
                        <!-- allows 'preview' features -->
                        <arg>--enable-preview</arg>
                        <!-- allows newest 'incubator' features -->
                        <arg>--add-modules=jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- for building jar including all dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>org.javademos.Main</mainClass>
                        </manifest>
                    </archive>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
            </plugin>
            <plugin>
                <!-- responsible for generating Javadocs in HTML format -->
                <!-- standalone command: mvn clean javadoc:javadoc -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.12.0</version>
                <configuration>
                    <source>25</source>
                    <additionalOptions>
                        <!-- allows 'preview' features -->
                        <additionalOption>--enable-preview</additionalOption>
                        <!-- allows newest 'incubator' features -->
                        <additionalOption>--add-modules=jdk.incubator.vector</additionalOption>
                        <!-- to skip errors for lombok-generated constructors -->
                        <additionalOption>-Xdoclint:none</additionalOption>
                    </additionalOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
</project>